// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`urql Composition Should generate subscription hooks 1`] = `
"import gql from 'graphql-tag';
import * as Urql from '@urql/vue';
export type Omit<T, K extends keyof T> = Pick<T, Exclude<keyof T, K>>;
type VueReactiveInput<T> = {
  [K in keyof T]: T[K] extends object ? VueReactiveInput<T[K]> | Ref<T[K]> | ComputedRef<T[K]> | Reactive<T[K]> : T[K] | Ref<T[K]> | ComputedRef<T[K]> | Reactive<T[K]>;
};

export const ListenToCommentsDocument = gql\`
    subscription ListenToComments($name: String) {
  commentAdded(repoFullName: $name) {
    id
  }
}
    \`;

export function useListenToCommentsSubscription<R = ListenToCommentsSubscription>(options: Omit<Urql.UseSubscriptionArgs<never, ListenToCommentsSubscriptionVariables>, 'query'>, handler?: Urql.SubscriptionHandlerArg<ListenToCommentsSubscription, R>) {
  return Urql.useSubscription<ListenToCommentsSubscription, R, ListenToCommentsSubscriptionVariables>({ query: ListenToCommentsDocument, ...options }, handler);
};"
`;

exports[`urql Composition should allow importing operations and documents from another file 1`] = `
"import * as Operations from '@myproject/generated';
import * as Urql from '@urql/vue';
export type Omit<T, K extends keyof T> = Pick<T, Exclude<keyof T, K>>;
type VueReactiveInput<T> = {
  [K in keyof T]: T[K] extends object ? VueReactiveInput<T[K]> | Ref<T[K]> | ComputedRef<T[K]> | Reactive<T[K]> : T[K] | Ref<T[K]> | ComputedRef<T[K]> | Reactive<T[K]>;
};


export function useTestQuery(options: Omit<Urql.UseQueryArgs<never, VueReactiveInput<Operations.TestQueryVariables>>, 'query'>) {
  return Urql.useQuery<Operations.TestQuery, VueReactiveInput<Operations.TestQueryVariables>>({ query: Operations.TestDocument, ...options });
};"
`;
